--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,8 @@
   flex-direction: column;
   padding: 50px;
 }
+.searchBox {
+  display: flex;
+  width: 300px;
+  justify-content: space-around;
+}
