--- a/src/dataTable2.css
+++ b/src/dataTable2.css
@@ -7,11 +7,11 @@
   margin-bottom: 50px;
 }
 
-.button1 {
+.button2 {
   width: 100px;
   align-self: flex-end;
   justify-self: flex-end;
-  color: white !important;
+  color: white;
   background-color: blue !important;
   margin-top: 10px !important;
 }
